--- a/src/works/work/Work.module.css
+++ b/src/works/work/Work.module.css
@@ -1,5 +1,7 @@
-.work{
-    width: 700px;
+.work {
+    width: 90%;
+    max-width: 700px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -7,43 +9,74 @@
     border: 1px solid;
 }
 
-.icon{
+.icon {
     background-color: #5a9b53;
     width: 100%;
-    height: 700px;
+    height: 300px;
     display: flex;
     align-items: center;
 }
-.button{
-    margin: 0 auto;
-    background-color: #e78db8;
-    width: 100px;
-    height: 40px;
 
+.button {
+    margin: 130px auto;
+    background-color: #e78db8;
+    width: 25%;
+    max-width: 100px;
+    height: 40px;
+    position: absolute;
+    padding: 10px;
+    box-sizing: border-box;
 }
-.footer{
+
+.footer {
     background-color: blanchedalmond;
     width: 100%;
-
 }
-.title{
+
+.title {
     margin-left: 20px;
     background-color: #83b075;
-    width: 140px;
-    display: flex;
-
-}
-.description{
-    margin-left: 20px;
-    margin-bottom: 20px;
-    width: 320px;
-    background-color: #83b075;
+    width: 40%;
+    max-width: 140px;
     display: flex;
 }
 
+.description {
+    margin: 20px;
+    width: 90%;
+    max-width: 320px;
+    background-color: #83b075;
+    display: flex;
+    flex-direction: column;
+}
 
 
+@media (max-width: 768px) {
+    .work {
+        width: 90%;
+        max-width: none;
+        margin: 0 auto;
+    }
 
+    .icon {
+        height: 200px;
+    }
 
+    .button {
+        margin: 90px auto;
+        width: 50%;
+        max-width: 150px;
+    }
 
+    .title {
+        margin-left: 10px;
+        width: 60%;
+        max-width: 200px;
+    }
 
+    .description {
+        margin: 10px;
+        width: 90%;
+        max-width: none;
+    }
+}
